# metAIsploit-assistant

./: .env-dev  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
datasets/scripts/: scrape_dataset.py
examples/: explicit_poc.py
metAIsploit_assistant/: main.py
metAIsploit_assistant/actions/: chat.py
metAIsploit_assistant/types/: __init__.py  model_types.py  training_types.py
metAIsploit_assistant/utilities/: formatters.py  gatherers.py  models.py
