[tool.poetry]
name = "metAIsploit-assistant"
version = "0.1.0"
description = "Use LLMs and open source models to generate metaploit modules from published CVEs"
authors = ["Atilla"]
license = "BSD 2-Clause License"
readme = "README.md"
packages = [{include = "metAIsploit_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry-exec-plugin = "^0.3.6"
pydantic = "^2.2.0"
pyyaml = "^6.0.1"
huggingface-hub = "^0.16.4"
langchain = "^0.0.267"
gpt4all = "^1.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"


[tool.poetry-exec-plugin.commands]
lint = "black ."

[tool.poetry.scripts]
chat = "metAIsploit_assistant.actions.chat:main"
demo = "examples.explicit_poc:main"
prompt-demo = "examples.explicit_poc:poetry_run_prompt_demo"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
